Fix flaky test